Correct some spacing on programs and contact

--- a/styl/contact.styl
+++ b/styl/contact.styl
@@ -9,7 +9,7 @@
     margin-bottom: spacing8x
 
   & h1
-    margin: spacing12x 0
+    margin: spacing8x 0 spacing6x
     line-height: lineHeight2
     font-family: fontFamilyRockwell
     font-size: fontSize2
@@ -22,6 +22,7 @@
     color: colorPrimary
 
   & h3
+    margin-bottom: spacing2x
     font-size: fontSize0
     line-height: lineHeight0
     font-weight: 100
